# uos-tv

./: .gitignore  AI-DEV.md  Cargo.toml  Dockerfile.cross  Dockerfile.lumind  Makefile  README.md  armbian-model-a-hardware-test.md  uos-armbian-base-prd.html  uos-tv-docs.html  uos-tvos-prd.html
.github/workflows/: armbian-model-a.yml  ci.yml  s905x-build.yml
configs/: monitord.yaml  s905_autoscript.cmd  system.yaml
configs/alpine-overlay/: MANIFEST
configs/alpine-overlay/etc/init.d/: uos-init
configs/armbian-model-a/: packages.txt
configs/dts/: b860h-hg680p-wifi.dtso
configs/services.d/: audiod.yaml  cog.yaml  devmand.yaml  dispald.yaml  inputd.yaml  logd.yaml  lumind.yaml  luna-httpd.yaml  netmd.yaml  notifd.yaml  otad.yaml  pkgd.yaml  powermand.yaml  stardust.yaml  wifid.yaml
crates/audiod/: Cargo.toml
crates/audiod/src/: devices.rs  main.rs  volume.rs
crates/casync-rs/: Cargo.toml
crates/casync-rs/src/: chunker.rs  index.rs  lib.rs  main.rs  store.rs
crates/devmand/: Cargo.toml
crates/devmand/src/: main.rs
crates/dispald/: Cargo.toml
crates/dispald/src/: main.rs
crates/inis/: Cargo.toml
crates/inis/src/: main.rs
crates/inputd/: Cargo.toml
crates/inputd/src/: input_handler.rs  main.rs
crates/logd/: Cargo.toml
crates/logd/src/: main.rs
crates/lumind/: Cargo.toml
crates/lumind/src/: main.rs
crates/lunad/: Cargo.toml
crates/lunad/src/: main.rs
crates/monitord/: Cargo.toml
crates/monitord/src/: graph.rs  lib.rs  main.rs  manifest.rs  sec.rs  supervisor.rs
crates/netmd/: Cargo.toml
crates/netmd/src/: connectivity.rs  ethernet.rs  main.rs  state.rs  wifi.rs
crates/notifd/: Cargo.toml
crates/notifd/src/: main.rs
crates/otad/: Cargo.toml
crates/otad/src/: config.rs  downloader.rs  main.rs  orch.rs
crates/pkgd/: Cargo.toml
crates/pkgd/src/: installer.rs  main.rs  registry.rs
crates/powermand/: Cargo.toml
crates/powermand/src/: main.rs
crates/rauc-rs/: Cargo.toml
crates/rauc-rs/src/: lib.rs  main.rs
crates/stardust/: Cargo.toml
crates/stardust/src/: broker.rs  client.rs  codec.rs  error.rs  lib.rs  main.rs  message.rs  ws.rs
crates/stardust/tests/: integration.rs  ota_pipeline.rs  ws_integration.rs
crates/update-verify/: Cargo.toml
crates/update-verify/src/: lib.rs  main.rs
crates/wifid/: Cargo.toml
crates/wifid/src/: main.rs
deploy/: docker-compose.dev.yml
luna/: index.html
luna/css/: shell.css
luna/js/: app.js  bus.js  nav.js
scripts/: bootstrap-armbian.sh  bootstrap-s905x.sh  build-cog.sh  build-s905x-wifi.sh  ci-qemu-smoke.sh  create-image-gpt.sh  create-image-simple.sh  create-image.sh  customize-armbian-model-a.sh  dev-run.sh  fetch-qemu-kernel.sh  ota-create-bundle.sh  overlay-alpine.sh  run-qemu.sh
