[package]
name = "audiod"
version = "0.1.0"
edition = "2024"
description = "UOS TV Audio Manager — ALSA volume control"

[[bin]]
name = "audiod"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
stardust = { path = "../stardust" }
parking_lot = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.11"
