[package]
name = "devmand"
version = "0.1.0"
edition = "2024"
description = "UOS TV Device Manager — udev event handling, hotplug"

[[bin]]
name = "devmand"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
stardust = { path = "../stardust" }
