[package]
name = "dispald"
version = "0.1.0"
edition = "2024"
description = "UOS TV Display Manager — backlight, resolution, HDR control"

[[bin]]
name = "dispald"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
stardust = { path = "../stardust" }
