[package]
name = "logd"
version = "0.1.0"
edition = "2024"
description = "Centralized logging daemon for UOS TV"

[[bin]]
name = "logd"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["net", "sync", "macros", "io-util", "fs"] }
tokio-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
nix = { workspace = true }
