[package]
name = "netmd"
version = "0.1.0"
edition = "2024"
description = "UOS TV Network Manager — WiFi, Ethernet, connection state"

[[bin]]
name = "netmd"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
stardust = { path = "../stardust" }
