[package]
name = "pkgd"
version = "0.1.0"
edition = "2024"
description = "UOS TV Package Manager — app install/update/remove"

[[bin]]
name = "pkgd"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
stardust = { path = "../stardust" }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
