[package]
name = "stardust"
version = "0.1.0"
edition = "2024"
description = "IPC pub/sub bus for UOS TV — Unix socket + CBOR messaging"

[[bin]]
name = "stardustd"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["net", "sync", "macros", "io-util"] }
tokio-util = { workspace = true, features = ["codec"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", features = ["sink"] }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
nix = { workspace = true }
dashmap = "6"
parking_lot = "0.12"

[dev-dependencies]
monitord = { path = "../monitord" }
update-verify = { path = "../update-verify" }
serde_yaml = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
