[package]
name = "update-verify"
version = "0.1.0"
edition = "2024"
description = "Ed25519 signature verification for UOS TV OTA bundles"

[dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
ring = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
